# Numerical_Analysis_Optimization_Package

./: LICENSE  README.md  main.py  setup.cfg
NumAn_Op/: multi_dim_min.py  one_dim_min.py  sys_eq.py
NumAn_Op.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Plotting_Scripts/: 3D_Comparison.py  Elimination_Methods_Comparison.py  Interpolation_Methods_Comparison.py
