[metadata]
name = NumAn_Op
version = 0.0.2
author = Hicham FILALI
author_email = hicham.filali@ieee.org
description = NumAn_Op (stands for Numerical Analysis & Optimization) is a python package that contains some optimization algorithms.
long_description = file: README.md
long_description_content_type = text/markdown
install_requires=['numpy', 'matplotlib', 'scipy', 'numdifftools'].
url = https://github.com/FILALIHicham/Numerical_Analysis_Optimization_Package
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.5
